# Group-Project-Griffith

./: .env.example  .gitignore  .model_config  Griffith College 200 Years.txt  LICENSE  LLAMA 3.2 COMMUNITY LICENSE AGREEMENT  Makefile  README.md  app.py  build_index.py  clean.sh  llm_loader.py  pyproject.toml  requirements.txt  run.sh  split_txt.sh
app/: window.py
code/: main.py
data/: img_chunck.json
griffith_history/: Griffith_history-000.ppm  Griffith_history-001.ppm  Griffith_history-002.ppm  Griffith_history-003.ppm  Griffith_history-004.ppm  Griffith_history-005.ppm  Griffith_history-006.ppm  Griffith_history-007.ppm  Griffith_history-008.ppm  Griffith_history-009.ppm  Griffith_history-010.ppm  Griffith_history-011.ppm  Griffith_history-012.ppm  Griffith_history-013.ppm  Griffith_history-014.ppm  Griffith_history-015.ppm  Griffith_history-016.ppm  Griffith_history-017.ppm  Griffith_history-018.ppm  Griffith_history-019.ppm  Griffith_history-020.ppm  Griffith_history-021.ppm  Griffith_history-022.ppm  Griffith_history-023.ppm  Griffith_history-024.ppm  Griffith_history-025.ppm  Griffith_history-026.ppm  Griffith_history-027.ppm  Griffith_history-028.ppm  Griffith_history-029.ppm  Griffith_history-030.ppm  Griffith_history-031.ppm  Griffith_history-032.ppm  Griffith_history-033.ppm  Griffith_history-034.ppm  Griffith_history-035.ppm  Griffith_history-036.ppm  Griffith_history-037.ppm  Griffith_history-038.ppm  Griffith_history-039.ppm  (+45 more)
model/: main.py  requirements.txt
results/: Arthur_Griffith.txt  From_Barracks_to_College.txt  bibliography_cleaned.txt  (+7 more)
(+37 files in other folders)
